# rohan_shenoy

./: CLUSTERING manas.ipynb  IEEE_Tanav_LinearReg.ipynb  README.md  cluteringrohanfinal.ipynb  cnn manas rohan final (1).ipynb  cnn manas rohan final.ipynb  linear regression final.ipynb  linearregression_final.ipynb  logisticregression_final_manas.ipynb  manas decision trees rohan shenoy.ipynb  opencvfinalupdated.py  rohanmanascnn.ipynb
manas1/: CMakeLists.txt  package.xml
manas1/src/: talker_listener_node.cpp  talker_listener_node_2.cpp
manas2/: CMakeLists.txt
manas2/src/: Astar.cpp
